templates/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
    kind: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeyield-front
  template:
    metadata:
      labels:
        app: kubeyield-front
        type: front
    spec:
      containers:
      - name: front
        image: jh0101/front-app:latest
        ports:
        - containerPort: 80
