templates/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: kubeyield-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
